Bug 119056 - Ark Crashes On Passworded Encrypted ZIPs
Summary: Ark Crashes On Passworded Encrypted ZIPs
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Harald Hvaal
URL:
Keywords:
: 113982 (view as bug list)
Depends on:
Blocks:
 
Reported: 2005-12-27 13:11 UTC by Dylan Taft
Modified: 2006-03-27 00:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dylan Taft 2005-12-27 13:11:35 UTC
Version:            (using KDE KDE 3.5.0)
Installed from:    Compiled From Sources
Compiler:          gcc version 3.4.4 
OS:                Linux

Easy to reproduce.

Let's make a test zip file.
echo zippy > zip.txt
zip -9 -e zip zip.txt

Put in a password, say, qr1234

K, now open it in ark.

Right click, view.  Put the pass in, seg.
Same goes if you try to drag it to say a folder in konqueror.
You can, however, extract the file normally.
Comment 1 Thiago Macieira 2005-12-27 16:48:34 UTC
Can you paste the crash backtrace?
Comment 2 Dylan Taft 2005-12-27 22:53:32 UTC
(no debugging symbols found)
Using host libthread_db library "/lib/tls/libthread_db.so.1".
(no debugging symbols found)
`system-supplied DSO at 0xffffe000' has disappeared; keeping its symbols.
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread -1500391744 (LWP 4151)]
[KCrash handler]
#4  0xa686feb5 in ZipArch::unarchFileInternal ()
   from /usr/kde/3.5/lib/kde3/libarkpart.so
#5  0xa687b84f in Arch::slotExtractExited ()
   from /usr/kde/3.5/lib/kde3/libarkpart.so
#6  0xa687bba6 in Arch::qt_invoke () from /usr/kde/3.5/lib/kde3/libarkpart.so
#7  0xa686e7bb in ZipArch::qt_invoke ()
   from /usr/kde/3.5/lib/kde3/libarkpart.so
#8  0xa70a8c84 in QObject::activate_signal () from /usr/qt/3/lib/libqt-mt.so.3
#9  0xa7709e3d in KProcess::processExited ()
   from /usr/kde/3.5/lib/libkdecore.so.4
#10 0xa7709eac in KProcess::processHasExited ()
   from /usr/kde/3.5/lib/libkdecore.so.4
#11 0xa770d5fc in KProcessController::slotDoHousekeeping ()
   from /usr/kde/3.5/lib/libkdecore.so.4
#12 0xa770d668 in KProcessController::qt_invoke ()
   from /usr/kde/3.5/lib/libkdecore.so.4
#13 0xa70a8c84 in QObject::activate_signal () from /usr/qt/3/lib/libqt-mt.so.3
#14 0xa70a924a in QObject::activate_signal () from /usr/qt/3/lib/libqt-mt.so.3
#15 0xa73fd8e0 in QSocketNotifier::activated ()
   from /usr/qt/3/lib/libqt-mt.so.3
#16 0xa70c595f in QSocketNotifier::event () from /usr/qt/3/lib/libqt-mt.so.3
#17 0xa70448ff in QApplication::internalNotify ()
   from /usr/qt/3/lib/libqt-mt.so.3
#18 0xa7044a9c in QApplication::notify () from /usr/qt/3/lib/libqt-mt.so.3
#19 0xa76be856 in KApplication::notify ()
   from /usr/kde/3.5/lib/libkdecore.so.4
#20 0xa7037ce3 in QEventLoop::activateSocketNotifiers ()
   from /usr/qt/3/lib/libqt-mt.so.3
#21 0xa6fef0cd in QEventLoop::processEvents ()
   from /usr/qt/3/lib/libqt-mt.so.3
#22 0xa705b080 in QEventLoop::enterLoop () from /usr/qt/3/lib/libqt-mt.so.3
#23 0xa705afd6 in QEventLoop::exec () from /usr/qt/3/lib/libqt-mt.so.3
#24 0xa7043a1f in QApplication::exec () from /usr/qt/3/lib/libqt-mt.so.3
#25 0xa7f09b8f in kdemain () from /usr/kde/3.5/lib/libkdeinit_ark.so
#26 0x080486ce in ?? ()
#27 0x00000001 in ?? ()
#28 0xaff2eb74 in ?? ()
#29 0x080497cc in ?? ()
#30 0xa6a32ff4 in ?? () from /lib/tls/libc.so.6
#31 0x00000000 in ?? ()
#32 0xa7f30ca0 in ?? () from /lib/ld-linux.so.2
#33 0xaff2eb48 in ?? ()
#34 0xa6934f31 in __libc_start_main () from /lib/tls/libc.so.6
#35 0xa6934f31 in __libc_start_main () from /lib/tls/libc.so.6
#36 0x08048611 in ?? ()
Comment 3 Haris Kouzinopoulos 2006-02-25 04:14:21 UTC
SVN commit 513340 by charis:

* If user presses cancel in view before password, don't try to open the file
* If user fails the password and then tries to view the file, don't say incorrectly that he has failed the pass

CCBUG: 119056



 M  +2 -1      arch.cpp  


--- branches/KDE/3.5/kdeutils/ark/arch.cpp #513339:513340
@@ -166,7 +166,8 @@
             unarchFileInternal(); // try to extract the file again with a password
             return;
         }
-        emit sigExtract( true );
+	 m_password = "";
+        emit sigExtract( false );
         delete _kp;
         _kp = m_currentProcess = 0;
         return;
Comment 4 Haris Kouzinopoulos 2006-03-17 01:44:03 UTC
SVN commit 519386 by charis:

Make the pointer to the list global, delete it only when the whole procedure is done

BUG: 119056



 M  +5 -3      arkwidget.cpp  
 M  +1 -0      arkwidget.h  


--- branches/KDE/3.5/kdeutils/ark/arkwidget.cpp #519385:519386
@@ -1353,9 +1353,8 @@
         it != fileList.end(); ++it)
         QFile::remove(destTmpDirectory + *it);
 
-    QStringList * list = new QStringList( fileList );
-    arch->unarchFile( list, destTmpDirectory, true);
-    delete list;
+    m_viewList = new QStringList;
+    arch->unarchFile( m_viewList, destTmpDirectory, true);
 }
 
 bool
@@ -1711,6 +1710,9 @@
 
     disconnect( arch, SIGNAL( sigExtract( bool ) ), this,
                 SLOT( viewSlotExtractDone( bool ) ) );
+
+    delete m_viewList;
+
     // avoid race condition, don't do updates if application is exiting
     if( m_fileListView )
     {
--- branches/KDE/3.5/kdeutils/ark/arkwidget.h #519385:519386
@@ -310,6 +310,7 @@
 
     QStringList mDragFiles;
     QStringList *m_extractList;
+    QStringList *m_viewList;
     KTempDir *m_tmpDir;
 };
 
Comment 5 Haris Kouzinopoulos 2006-03-17 02:22:53 UTC
SVN commit 519393 by charis:

Small fix for my previous commit
CCBUG: 119056



 M  +1 -1      arkwidget.cpp  


--- branches/KDE/3.5/kdeutils/ark/arkwidget.cpp #519392:519393
@@ -1353,7 +1353,7 @@
         it != fileList.end(); ++it)
         QFile::remove(destTmpDirectory + *it);
 
-    m_viewList = new QStringList;
+    m_viewList = new QStringList( fileList );
     arch->unarchFile( m_viewList, destTmpDirectory, true);
 }
 
Comment 6 Haris Kouzinopoulos 2006-03-27 00:05:33 UTC
*** Bug 113982 has been marked as a duplicate of this bug. ***