Make the pointer to the list global, delete it only when the whole procedure is done

BUG: 119056


svn path=/branches/KDE/3.5/kdeutils/ark/; revision=519386